--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
-	<title>Mon onglet</title>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<title>Marvel</title>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/18ee24e4d3.js"></script>
 
-<script src="https://kit.fontawesome.com/8fde92c3d3.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	 <link rel="stylesheet" type="text/css" href="style.css">
+ </head>
+<body>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(photos/image2.jpg)">
 
-<body class="text-center">
-
-     <div class="line-transparent">
-        <div class="line-dark"></div>
-        <div class="line-medium"></div>
-        <div class="light"></div>
-    </div>
-
-
-    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(images/image1.jpg);">
-  <div class="container">
-    <h1>Les Muffins de Grand Mère <strong>Fondant et Croustillant</strong> to <strong>creative people</strong>!</h1>
- <img src="images/mojito.jpg" width="300px" class="img1">
-
-         <br>
-
-         <a href="https://github.com/Joz84/day-a.github.io" target="_blank" class="btn-pink">Mon premier lien</a>
-
-
-         <!-- Button trigger modal -->
-<button type="button" class="btn-pink" data-toggle="modal" data-target="#exampleModal">
-Contact
-</button>
-  </div>
+	<div class="container">
+		<h1>MARVEL CINEMATIC UNIVERSE</h1>
+		<img src="photos/image1.png" class="img1">
+		<br>
+		 <a href="https://www.youtube.com/watch?v=FOabQZHT4qY" target="_blanck" class="my-btn">Lancer la musique</a>
+	</div>
+	<br>
+<br>
+<br>
 </div>
 
 
-  <div class="navbar">
-    <img src="images/logo.png" class="logo">
+	<div class="my-navbar">
+   <img src="photos/image.png" class="logo">
     <div class="links">
-      <a href="" class="link">Présentation</a>
-      <a href="" class="link">Team</a>
+      <a href="https://www.marvel.com/" target="blanck" class="link">FILMS/SÉRIES</a>
+      <a href="https://www.marvel.com/" target="blanck" class="link">COMICS</a>
+      <a href="https://www.marvel.com/" target="blanck" class="link">BOUTIQUE</a>
 
-      <!--Button trigger modal --> 
-<button type="button" class="btn-pink" data-toggle="modal" data-target="#exampleModal">
+           <!--Button trigger modal --> 
+<button type="button" class="contact" data-toggle="modal" data-target="#exampleModal">
 Contact
 </button>
 
@@ -61,13 +49,13 @@ Contact
         </button>
       </div>
       <div class="modal-body">
-        Téléphone : 0607060706
-        <br>
-        Mail : fzefzef@efap.com
+      	Bonjour, j'ai réussi à créer une modale !!
+      	<br>
+      	Téléphone : 06 78 39 65 42
+      	<br>
+      	Mail : anais.moussaoui@efap.com
+      
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Ok</button>
-      </div>
     </div>
   </div>
 </div>
@@ -75,144 +63,103 @@ Contact
 </div>
     </div>
   </div>
+    </div>
+</div>
 
 
-   <!-- <div class="cadre margin-100px">
-          <h1>Mon titre</h1>
-         <h2 class="color-green">Mon sous titre</h2>
-    </div>-->
+    
+<div cadre="text-left">
     <div class="cadre margin-100px">
-        <h3 class="color-green"><i class="fas fa-cookie-bite"></i>Mon sous sous titre</h3>
+         <h2><i class="fas fa-mask"></i> Mais qu'est-ce que le Marvel Cinematic Universe ?</h2>
+         <p>
+    <i>L'Univers cinématographique Marvel (Marvel Cinematic Universe en anglais, abrégé en MCU) est une franchise cinématographique produite par Marvel Studios mettant en scène des personnages de bandes dessinées de l'éditeur Marvel Comics. Marvel Studios est la propriété de The Walt Disney Company.</i>
+<br>
+<br>
+<br>
+Les films qui font partie de cet univers partagé sont, à l'origine, ceux mettant en vedette Les Avengers, un groupe de super-héros comprenant Iron Man, Hulk, Thor, Black Widow, Hawkeye et Captain America. C'est le film Iron Man, sorti en 2008, qui lance cet univers. Le film Les Gardiens de la Galaxie, sorti en août 2014, est le premier dans lequel Les Avengers n'apparaissent pas, et presque tous se regroupent en 2018 et 2019 dans Avengers : Infinity War suivi par Avengers: Endgame, qui devient le film le plus lucratif de l'histoire du cinéma mondial avec des recettes excédant les 2,798 milliards de dollars.
+<br>
+<br>
+La création d'un univers filmique s'apparente à ce que proposait Stan Lee dans les comics, où les personnages peuvent apparaître dans d'autres séries que la leur. Avec le concept d'univers étendu, les productions cinématographiques Marvel ont mis en scène, sous la houlette du producteur Kevin Feige, une vaste galerie de personnages et participé à rendre davantage populaire le genre de films de super-héros.
+<br>
+<br>
+Depuis 2013, avec la création de la série Marvel : Les Agents du SHIELD, l'univers étendu est aussi présent à la télévision, avec onze séries diffusées sur différentes plateformes.</p>
+ </div>  
 
-            <p>La légende raconte que <b>l'histoire du mojito</b> remonterait au début du xvie siècle (la date de naissance officieuse du prédécesseur du mojito est 1586) lorsque le corsaire explorateur anglais Francis Drake, entre deux pillages de La Havane, appréciait siroter des feuilles de menthe pilées avec du tafia (rhum industriel). <i>Cette tradition explique que des clients actuels demandent dans certains bars « give me a Drake » (« donnez moi un Drake » en anglais).</i>
-            <br>
-            Au xxe siècle, la recette originelle évolue : le tafia est remplacé par du rhum et le citron vert agrémente le mélange. Ainsi est né le mojito connu aujourd’hui, et qui tire son nom du « mojo », une mixture à base de citron initialement destinée à rehausser le goût des aliments.
-         <br>
-            En 1920, le mojito devint un véritable emblème de la culture cubaine, et est élevé au rang de « cocktail national de Cuba » (le rhum de Cuba est un des principaux produits d'exportation de l'économie de Cuba)
-         <br>
-             Très apprécié par l’écrivain journaliste américain Ernest Hemingway qui venait régulièrement le déguster lorsqu'il vivait à Cuba entre 1939 et 1960, avec ses célèbres habitudes locales « mon Mojito à La Bodeguita del Medio, mon Daïquiri à la El Floridita » (Ernest Hemingway à Cuba)3. Le cocktail finit par s’exporter d’abord aux États-Unis, puis en Europe, avant d’être préparé dans la plupart des bars du monde entier4.
-          <br>
-            En France, il a été démocratisé à partir des années 1990 par une importante campagne marketing de la part de la marque de <strong>rhum Havana Club</strong>.</p>
 
+ 
 
-        <!-- <img src="images/mojito.jpg" width="300px" class="img1">
-
-         <br>
-
-         <a href="https://github.com/Joz84/day-a.github.io" target="_blank" class="btn-pink">Mon premier lien</a>-->
-
-    <div class="cadre margin-100px">
-          <h3 class="color-green">Ma recette en vidéo</h3>
-
-         <iframe width="966" height="543" src="https://www.youtube.com/embed/VRLuazR3-Gc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-
-    <div class="display-flex margin-100px">
-    <div class="cadre text-left margin-right-30px">
-         <h4 class="color-green">Ingrédients</h4>
-
-         <ul>
-    	  <li> 280 g de farine</li>
-        <li> 2 oeufs</li>
-        <li> 100 g de sucre</li>
-        <li> 150 ml de lait</li>
-        <li> 80 g de beurre (ou 8 cuillères à soupe d'huile)</li>
-        <li> 1 sachet de levure chimique</li>
-        <li> 1 sachet de sucre vanillé</li>
-        <li> 1 pincée de sel</li>
-        <li> Cannelle</li>
-        <li> Extrait de vanille</li>
-        </ul>
-    </div>
-
-    <div class="cadre text-left">
-    <h4 class="color-green">Préparation</h4>
-
-       <ol>
-        <li>
-          <p><b>Etape 1</b> :
-            Dans un premier saladier : mélanger la farine, le sucre, le sel, le sucre vanillé et la levure.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 2</b> :
-            Dans un deuxième saladier : mélanger le lait, l'huile(ou beurre fondu) et les oeufs.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 3</b> :
-            Verser le contenu du second saladier dans le premier et remuer jusqu'à obtenir une pâte plutôt lisse. Laissez tout de même quelques petits grumeaux.
-          </p>
-        </li>
-        <li>
-          <p><b>Etape 4</b> :
-            Mettre au four 15 min à 180°C (thermostat 6)
-          </p>
-        </li>
-      </ol>
-    </div>
-  </div>
-
-    <div class="cadre margin-100px">
-        <h3 class="color-green">Vos productions</h3>
-
-         <div class="card" style="width: 18rem;">
-  <img src="images/mojito1.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Ghirin</h5>
-    <p class="card-text">"c'est quoi mojito".</p>
-  </div>
+   	<h3><i class="fas fa-mask"></i> Voici la liste chronologique des 22 films du MCU à voir :</h3>
+   <ul>
+   	<li>Captain America : First Avenger</li>
+   	<li>Captain Marvel</li>
+   	<li>Iron Man</li>
+   	<li>Iron Man 2</li>
+   	<li>Thor</li>
+   	<li>L'Incroyable Hulk</li>
+   	<li>Avengers</li>
+   	<li>Iron Man 3</li>
+   	<li>Thor : Le Monde des ténèbres</li>
+   	<li>Captain America, le soldat de l'hiver</li>
+   	<li>Les Gardiens de la Galaxie</li>
+   	<li>Avengers : l'ère d'Ultron</li>
+   	<li>Ant-Man</li>
+   	<li>Camptain America : Civil War</li>
+   	<li>Black Panther</li>
+   	<li>Spider-Man : Homecoming</li>
+   	<li>Les Gardiens de la Galaxie 2</li>
+   	<li>Doctor Strange</li>
+   	<li>Thor : Ragnarock (le meilleur film selon moi)</li>
+   	<li>Avengers : Infinity War</li>
+   	<li>Ant-Man et la guêpe</li>
+   	<li>Avengers : Endgame</li>
+   </ul>
 </div>
+   <br>
 
-<div class="card" style="width: 18rem;">
-  <img src="images/mojito2.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Mino</h5>
-    <p class="card-text">"J'aaaaadore les mojitos".</p>
-  </div>
-</div>
+ 	<h3><i class="fas fa-mask"></i> Le prochain film Marvel qui doit sortir est Black Widow mais à cause du coronavirus sa sortie a été décalée en Novembre 2020, mais tu peux déjà regarder la bande annonce :</h3>
 
-<div class="card" style="width: 18rem;">
-  <img src="images/mojito3.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Danny</h5>
-    <p class="card-text">"Je bois pas d'alcool".</p>
-  </div>
+ 	<iframe width="560" height="315" src="https://www.youtube.com/embed/RxAtuMu_ph4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <!--  <img src="images/mojito1.jpg" class="img2">
-        <img src="images/mojito2.jpg" class="img2">
-        <img src="images/mojito3.jpg" class="img2">-->
-    </div>
+ 	<br>
+
+<h3><i class="fas fa-mask"></i> Savais-tu que la bataille finale dans le premier Avengers à été tournée à New York ?</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2798821438!2d-74.25986540376853!3d40.697670069222035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1592346331951!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<br>
+<br>
+<br>
+<h3><i class="fas fa-mask"></i> Quelques affiches de films :</h3>
+	<div class="affiches">
+<img src="photos/affiche1.jpg" class="photoaffiche">
+<img src="photos/affiche2.jpg" class="photoaffiche">
+<img src="photos/affiche3.jpg" class="photoaffiche">
 
 
-<div class="care margin-100px">
-  <h3>Ajouter ma production</h3>
-  <div class="typeform-widget" data-url="https://anaismoussaoui.typeform.com/to/IvEc8N" style="width: 100%; height: 300px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=IvEc8N&utm_source=typeform.com-01E95D1S422T3B1AYPEEV2XR7Q-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+<div class="cadre margin-100px">
+  <h3>Quelques questions</h3>
+<div class="typeform-widget" data-url="https://form.typeform.com/to/TOx7Sl" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=TOx7Sl&utm_source=typeform.com-01E95D1S422T3B1AYPEEV2XR7Q-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 
 </div>
+   
+ <div class="mail">
+ 	<h3>Une question ?</h3>
+ 	<br>
+ 	Clique sur la petite enveloppe !
+ 	<br>
+ 	<br>
+ 	<a href="mailto:anais.moussaoui@efap.com" target="_blanck"><i class="fas fa-envelope"></i>
 
 
-
-
-    <div class="cadre margin-100px">
-        <h3 class="color-green">Une Super Adresse !</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11316.440243610348!2d-0.5920038013860639!3d44.83969191177522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd54d8070baa46af%3A0x3e9e447fe1a4a288!2sL&#39;Atelier%20du%2048!5e0!3m2!1sfr!2sfr!4v1590195198409!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-  <div class="footer">
+    <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+  	<p>Suivez les actus Marvel</p>
+    <a href="https://www.instagram.com/marvelfr/?hl=fr" target="_blanck"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/MarvelFR" target="_blanck"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/MarvelFR" target="_blanck"><i class="fab fa-twitter"></i></a>
   </div>
+ 
 </div>
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
-
 </html>
