--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ Depuis 2013, avec la création de la série Marvel : Les Agents du SHIELD, l'uni
 
 
 <div class="cadre margin-100px">
-  <h3>Quelques questions</h3>
+  <h3><i class="fas fa-mask"></i> Quelques questions</h3>
 <div class="typeform-widget" data-url="https://form.typeform.com/to/TOx7Sl" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=TOx7Sl&utm_source=typeform.com-01E95D1S422T3B1AYPEEV2XR7Q-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 
 </div>
    
  <div class="mail">
- 	<h3>Une question ?</h3>
+ 	<h3><i class="fas fa-mask"></i> Une question ?</h3>
  	<br>
  	Clique sur la petite enveloppe !
  	<br>
@@ -150,8 +150,9 @@ Depuis 2013, avec la création de la série Marvel : Les Agents du SHIELD, l'uni
 
 
     <div class="footer">
+      <p><i class="fas fa-mask"></i> SUIVEZ LES ACTUS MARVEL :</p>
   <div class="footer-links">
-  	<p>Suivez les actus Marvel</p>
+  	
     <a href="https://www.instagram.com/marvelfr/?hl=fr" target="_blanck"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/MarvelFR" target="_blanck"><i class="fab fa-facebook"></i></a>
     <a href="https://twitter.com/MarvelFR" target="_blanck"><i class="fab fa-twitter"></i></a>
